# titanic-prediccion

./: .gitignore  main.py  pyproject.toml
.claude/: settings.local.json
datos/: 01_datos_crudos_titanic.parquet  02_datos_con_tipo_de_dato_ajustado_titanic.parquet
modelos/: lightgbm_tuned_model.pkl  randomforest_best_model.joblib  xgb_flaml_automl_model.joblib
notebooks/: 01_descarga_datos.ipynb  02_exploracion_datos.ipynb  03_AutoML_PyCaret.ipynb  04_AutoML_FLAML.ipynb  05_entrenamiento_modelo.ipynb  06_interpretacion_modelos.ipynb  07_titanic_streamlit.py
