[project]
name = "titanic-prediccion"
version = "0.1.0"
description = "Este es un mini proyecto sobre el conjunto de datos Titanic"
author = [
    {name = "David Palacio", email= "davidpalacioj@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11, <3.12"
dependencies = [
    "flaml[automl]>=2.3.6",
    "gdata>=2.0.18",
    "ipykernel>=7.0.1",
    "numpy>=1.21,<1.27",
    "pandas>=1.3.0,<2.0.0",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "pycaret>=3.0.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]

[tool.uv]
dev-dependencies = ["ruff", "pytest"]
